# Image-Processor

./: .gitignore  Dockerfile  README.md  celeryconfig.py  image_processing.db  pyproject.toml  requirements.txt
app/: main.py
app.egg-info/: SOURCES.txt
app/api/: processed_images.py  status.py  upload.py
app/core/: celery_app.py  database.py
app/services/: csv_processing.py  image_processing.py
app/tasks/: image_tasks.py
