[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### specific rules to ignore
    "E501",   # line too long
    "E731",   # ignore lambda functions
]
